# cqrscap

./: .gitignore  LICENSE  README.md  pyproject.toml
cqrscap/: capturer.css  capturer.py  consumer.py  logger.py  main.py  utils.py
